fix: harden recipe layer publication